@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-14T16:15:11Z",
-  "count_outdated" : 264,
-  "uniques_outdated" : 130,
-  "count" : 302,
-  "uniques" : 156,
+  "timestamp" : "2022-05-15T08:14:34Z",
+  "count_outdated" : 266,
+  "uniques_outdated" : 132,
+  "count" : 303,
+  "uniques" : 157,
   "clones" : [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-02T00:00:00Z",
       "count": 1,
@@ -88,6 +81,13 @@
       "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
