@@ -1,12 +1,7 @@
 {
-  "count": 38,
-  "uniques": 14,
+  "count": 37,
+  "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-05-02T00:00:00Z",
       "count": 1,
@@ -60,6 +55,11 @@
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-15T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
