@@ -1,3 +1,10 @@
+2022-05-15T08:14:34Z:
+* notice: last 14d: all unq: 37 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 302 156
+* notice: next accum: outdated-all outdated-unq / all unq: 266 132 / 303 157
+* notice: prev json diff / prev day diff: unq all: +1 +1 -0 -0 / +1 +1 -0 -0
+* notice: changed dates: [2022-05-15]
+
 2022-05-14T16:15:11Z:
 * notice: last 14d: all unq: 38 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 301 156
